--- a/.github/workflows/deploy-test-runner.yml
+++ b/.github/workflows/deploy-test-runner.yml
@@ -1,4 +1,4 @@
-name: Deployment (Container)
+name: Deployment (Testing w/runner)
 on:
   push:
     branches:
@@ -11,8 +11,6 @@ jobs:
   test:
     environment: testing
     runs-on: ubuntu-latest
-    # container:
-    #  image: node:22.14.0
     env:
       # MongoDB Atlas
       #MONGODB_CONNECTION_PROTOCOL: mongodb+srv
@@ -22,7 +20,6 @@ jobs:
 
       # service container
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      # MONGODB_CLUSTER_ADDRESS: mongodb
       MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
